# pkg/api/topic/platform/pgsql/topic.go
@@ -5,8 +5,8 @@ import (
 	"strings"
 
 	"github.com/go-pg/pg"
+	"gitlab.com/nguyencatpham/go-effective-study/pkg/utl/model"
 
-	"../../../../model"
 	"github.com/go-pg/pg/orm"
 	"github.com/labstack/echo"
 )
@@ -21,24 +21,24 @@ type Topic struct{}
 
 // Custom errors
 var (
-	ErrAlreadyExists = echo.NewHTTPError(http.StatusInternalServerError, "Topicname  already exists.")
+	ErrAlreadyExists = echo.NewHTTPError(http.StatusInternalServerError, "Topic name  already exists.")
 )
 
 // Create creates a new topic on database
-func (u *Topic) Create(db orm.DB, usr model.Topic) (*model.Topic, error) {
+func (u *Topic) Create(db orm.DB, topicModel model.Topic) (*model.Topic, error) {
 	var topic = new(model.Topic)
-	err := db.Model(topic).Where("lower(topicname) = ? and deleted_at is null",
-		strings.ToLower(usr.Topicname)).Select()
+	err := db.Model(topic).Where("lower(name) = ?",
+		strings.ToLower(topicModel.Name)).Select()
 
 	if err != nil && err != pg.ErrNoRows {
 		return nil, ErrAlreadyExists
 
 	}
 
-	if err := db.Insert(&usr); err != nil {
+	if err := db.Insert(&topicModel); err != nil {
 		return nil, err
 	}
-	return &usr, nil
+	return &topicModel, nil
 }
 
 // View returns single topic by ID
@@ -46,7 +46,7 @@ func (u *Topic) View(db orm.DB, id int) (*model.Topic, error) {
 	var topic = new(model.Topic)
 	sql := `SELECT "topic".*
 	FROM "topics" AS "topic"
-	WHERE ("topic"."id" = ? and deleted_at is null)`
+	WHERE ("topic"."id" = ?)`
 	_, err := db.QueryOne(topic, sql, id)
 	if err != nil {
 		return nil, err
@@ -63,8 +63,13 @@ func (u *Topic) Update(db orm.DB, topic *model.Topic) error {
 // List returns list of all topics retrievable for the current topic, depending on role
 func (u *Topic) List(db orm.DB, qp *model.ListQuery, p *model.Pagination) ([]model.Topic, error) {
 	var topics []model.Topic
-	q := db.Model(&topics).Column("topic.*").Limit(p.Limit).Offset(p.Offset).Where("deleted_at is null").Order("topic.id desc")
-	if qp != nil {
+	q := db.Model(&topics).
+		Column("topic.*").
+		Where("deleted_at is null").
+		Limit(p.Limit).
+		Offset(p.Offset).
+		Order("topic.id desc")
+	if qp != nil && qp.Query != "" {
 		q.Where(qp.Query, qp.ID)
 	}
 	if err := q.Select(); err != nil {
